Fix: post spacing, flex layout for following and feed page

--- a/public/css/partials/feed.css
+++ b/public/css/partials/feed.css
@@ -29,6 +29,7 @@
 .feed--title {
     font-weight: 400;
     font-size: 1.5rem;
+    margin-bottom: 2rem;
 }
 
 /* POSTS */
@@ -51,7 +52,6 @@
     background: rgb(248, 248, 248);
     border-radius: .5rem;
     border: .075rem solid var(--light-gray);
-    margin-top: 2rem;
     padding: 1rem;
 }
 
@@ -72,7 +72,7 @@
 
 .climb--image-container {
     height: 12rem;
-    margin-block: 1rem;
+    margin-block: .5rem;
 }
 
 .climb--img {
@@ -141,7 +141,7 @@
 /* Connect Post */
 
 .rendered--connect-post {
-    height: 17rem;
+    height: 16rem;
 }
 
 .connect--header {
